# GD32F303VCT6_CMake

./: CMakeLists.txt  GD32F303VE_DEFAULT.ld  README.md
Drivers/CMSIS/Device/GD/GD32F30x/Source/: startup_gd32f303_cl.s  startup_gd32f303_hd.s  startup_gd32f303_xd.s  system_gd32f30x.c
Drivers/CMSIS/Device/GD/GD32F30x/Source/GCC/: startup_gd32f30x_hd.s
include/: systick.h
src/: main.c
utility/: memory_usage.bat  memory_usage.sh
utility/linux/: largest_functions.sh  memory_by_section.sh  section_sizes.sh
utility/windows/: largest_functions.bat  memory_by_section.bat  section_sizes.bat
